fixes text overlapping

--- a/client/app/student/upload/submit/submit.less
+++ b/client/app/student/upload/submit/submit.less
@@ -9,7 +9,7 @@
 
   .event-summary {
     margin: -235px 20px 50px 20px;
-    height: 150px;
+    // height: 150px;
     .title{
       font-size:18px;
       color:#333;
@@ -23,7 +23,7 @@
   .img-upload-preview {
     list-style: none;
   }
-  
+
   .submissionInstructions{
     font-style: italic;
     color:#888;
